style.css
html {
  box-sizing: inherit;
}
body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
:root {
  --fuentePrincipal: "Montserrat", sans-serif;
  --celeste: #2292a7;
  --amarillo: #ffc107;
  --negro: #0e0e0e;
  --violeta: #7f54fe;
  --gris: #fafafa;
}

h1,
h2,
h3,
h4,
p,
span,
a,
button,
input,
textarea,
label {
  font-family: var(--fuentePrincipal);
}
.header{
  position: fixed;

  height: 100%;
 z-index: -1;
  width: 100%;
  overflow: hidden;
}

.header a {
  text-decoration: none;
  margin: 0 0.5rem;
}

.container-menu{
  width: 50px;
height: 30px;
  display: flex;
  position: absolute;
  top: 3.5%;
  right: 0%;
  z-index: 10000;
 
}

.container-menu:hover{
  cursor: pointer;
}
.container-header {

  width: 100%;
 box-shadow: none;
 height: 100%;

}
@media(min-width:1024px){
  .header{
    position: relative;
  } 

  .container-header {

    width: 100%;
    -webkit-box-shadow: 0px 0px 12px 0px rgba(224, 224, 224, 1);
    -moz-box-shadow: 0px 0px 12px 0px rgba(224, 224, 224, 1);
    box-shadow: 0px 0px 12px 0px rgba(224, 224, 224, 1);
  }

}

.header h1 {
  color: var(--celeste);
  display: none;
}
.nav a {
  color: var(--negro);
  font-size: 1.4rem;
  font-weight: 300;
  display: block;
  margin: 0.5rem 0;
}
.nav a:first-child {
  font-weight: 600;
  border-bottom: 2px solid var(--celeste);
}

.container-nav {
  
  width: 0%;
  flex-direction: column;
  height: 100%;
  align-items: center;
  background-color: white;

  padding: 0;
  transition: all .5s ease-in-out;
}
.visible{
  width: 100% ;

}

.nav{ /*ALTERAR ESTOS*/ 

  height: 100%;
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}


.container-buttons { /*ALTERAR ESTOS*/ 

  display: none;
  flex-direction: column;
  align-items: center;
  margin: 1rem 0;
  width: 100%;
}

.display-visible{
  display: flex;
}


.container-login{
  margin: 1rem 0;
  
}

@media (min-width: 1024px) {

  .header h1 {
    display: block;
  }
  .container-menu{
  display: none;
   
  }


  .nav{
    display: flex;
    flex-direction: row;
    align-items: center;
    height: fit-content;
  }

  
  .container-nav {

    max-width: 1600px;
    margin: 0 auto;
    padding: 1rem .5rem;
  
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
  }
  .nav a {
    display: inline;
    font-size: 1rem;
    margin: 0rem 0.5rem;
  }

  .container-buttons {
    width: fit-content;
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 1rem 0;
  }

  .container-login{
    margin: 0;
  }
}


@media(min-width:1800px){
    
  .container-nav {
    max-width: 1800px;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
  }
}


.container-login a {
  color: #2292a7;
}
.container-signup a {
  background-color: #2292a7;
  color: white;
  padding: 0.5rem 1.6rem;
  border-radius: 18px;
}



/*HERO*/

.hero {
  height: 1100px;
  position: relative;
  background-color: #fafafa;
}

@media (min-width: 768px) {
  .hero {
    height: 800px;
    position: relative;
    background-color: #fafafa;
  }
}

.container-hero {
  position: relative;
  height: 100%;
}

.container-hero-img {
  position: absolute;
  max-width: 1800px;

  margin: 0 auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.container-hero-img img {
  filter: brightness(0.5);
    border-radius: 0px;
    object-fit: cover;
}

@media(min-width:1024px){
  .container-hero-img img {
    border-radius: 30px;
  } 

}
.container-text-hero {
  max-width: 700px;
}

.container-text-hero h2 {
  color: white;

  font-size: 2.5rem;
  line-height: 3rem;
}
.container-text-hero p {
  color: white;
  font-size: 1rem;
  line-height: 2rem;
}

.container-data-hero {
  position: relative;
  z-index: 10;
  max-width: 1600px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 3rem;
}

@media (min-width: 768px) {
  .container-text-hero h2 {
    color: white;

    font-size: 3rem;
    line-height: 5rem;
  }
}

/*VIAJES*/
.container-tipos-viaje {
  color: black;
  display: flex;
}
.container-tipos-viaje button {
  border: none;
  outline: none;
  height: 60px;
  width: 150px;
  border-top-right-radius: 15px;
  border-top-left-radius: 15px;
}
.container-tipos-viaje button:first-child {
  background-color: var(--amarillo);
}

.container-destino form label {
  display: block;
  color: black;
}
.container-destino {
  padding: 3rem 1rem;
  background-color: #fafafa;

  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
}
.container-to {
  margin: 0.5rem 0;
}
@media (min-width: 320px) {
  .container-to {
    margin: 1rem 0.5rem;
  }
}

.container-destino form {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: left;
}

@media (min-width: 1493px) {
  .container-destino form {
    padding: 0;
  }
}
.container-destino form div {
  color: white;
}

form select {
  height: 40px;
}

.container-from select {
  width: 100%;
}
.container-to select {
  width: 100%;
}

form input[type="date"] {
  height: 40px;
  width: 100%;
}

.container-search {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  margin-top: 1rem;
}
.container-search input {
  width: 100%;
  border: none;
  background-color: #2292a7;
  color: white;
  font-size: 1rem;
  border-radius: 5px;
  padding: 0.7rem 0;
  transition: .5s background ease-in-out;
}
.container-search input:hover{
  background-color: white;
  color: #2292a7;
  border: 2px solid #2292a7;
  cursor: pointer;
}

@media (min-width: 1024px) {
  .container-text-hero p {
    font-size: 1.3rem;
  }
  .container-text-hero h2 {
    font-size: 3.7rem;
  }
  .container-data-hero {
    padding: 0 5rem;
  }
}

@media (min-width: 892px) {
  .container-search {
    width: 300px;
    height: 100%;
    padding: 0;
  }
}
/* ... */

